--- a/package.json
+++ b/package.json
@@ -2,11 +2,20 @@
   "name": "style-hub-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./index.js",
+    "dev": "node --env-file .env --watch ./index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "axios": "1.7.7",
+    "cors": "2.8.5",
+    "express": "4.21.1",
+    "morgan": "1.10.0"
+  }
 }
