--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "1.7.7",
     "cors": "2.8.5",
     "express": "4.21.1",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "mysql2": "3.11.3"
   }
 }
