--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "1.7.7",
     "cors": "2.8.5",
+    "dayjs": "1.11.13",
     "express": "4.21.1",
     "morgan": "1.10.0",
     "mysql2": "3.11.3"
