--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "1.11.13",
     "express": "4.21.1",
     "morgan": "1.10.0",
-    "mysql2": "3.11.3"
+    "mysql2": "3.11.3",
+    "zod": "3.23.8"
   }
 }
