--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "4.21.1",
     "morgan": "1.10.0",
     "mysql2": "3.11.3",
+    "node-cron": "3.0.3",
     "zod": "3.23.8"
   }
 }
