--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "2.8.5",
     "dayjs": "1.11.13",
     "express": "4.21.1",
+    "helmet": "^8.0.0",
     "morgan": "1.10.0",
     "mysql2": "3.11.3",
     "node-cron": "3.0.3",
